avoid input files that can be interpreted as tests to run
They are only input files for testing the JUnit5ToJnrTestGenerator